aktualizacja tłumaczenia i poprawka menu

--- a/pl/index.html
+++ b/pl/index.html
@@ -4,6 +4,7 @@ author_profile: true
 title: Strona główna
 locale: pl-PL
 permalink: /pl/
+id: home
 ---
 
 <p>Witamy na polskiej stronie głównej!!!</p>
