utworzenie bocznego menu dla Projekty

--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -2,8 +2,9 @@
 title: "Projects"
 layout: single
 locale: en-US
+author_profile: true
 sidebar:
-  nav: main
+  nav: projects-children
 permalink: /en/projects/
 id: projects
 ---
