--- a/pl/projects/index.html
+++ b/pl/projects/index.html
@@ -2,8 +2,9 @@
 title: "Projekty"
 layout: single
 locale: pl-PL
+author_profile: true
 sidebar:
-  nav: main
+  nav: projekty-children
 permalink: /pl/projects/
 id: projects
 ---
