aktualizacja linków bio

--- a/en/index.html
+++ b/en/index.html
@@ -5,6 +5,17 @@ title: "Home"
 locale: en-US
 permalink: /en/
 id: home
+tags: [sql, mikrotik, csharp, esp32, programming, scripts, electronics, automation, networking]
 ---
 
-Welcome to the English version of the site!
+<div class="home-intro">
+<h2>Welcome to my website!</h2>
+<p>Here you'll find practical tips, examples, and projects in programming and system configuration. I focus on technologies I use every day:</p>
+<ul>
+  <li>🧠 <strong>SQL</strong> – from queries to database optimization</li>
+  <li>🌐 <strong>RouterOS for MikroTik</strong> – network configuration, scripts, and automation</li>
+  <li>💻 <strong>C#</strong> – desktop applications, tools, and integrations</li>
+  <li>🔌 <strong>ESP32 and Arduino</strong> – IoT projects, electronics, and microcontrollers</li>
+</ul>
+<p>This site was created out of a passion for solving problems and sharing knowledge. If you're interested in programming, computer networks, or electronics – you're in the right place.</p>
+</div>
