--- a/pl/index.html
+++ b/pl/index.html
@@ -5,6 +5,18 @@ title: Strona główna
 locale: pl-PL
 permalink: /pl/
 id: home
+tags: [sql, mikrotik, csharp, esp32, programowanie, skrypty, elektronika, automatyka, sieci]
 ---
 
-<p>Witamy na polskiej stronie głównej!!!</p>
+<div class="home-intro">
+<h2>Witaj na mojej stronie!</h2>
+<p>Znajdziesz tu praktyczne porady, przykłady i projekty z zakresu programowania oraz konfiguracji systemów. Skupiam się na technologiach, które sam wykorzystuję na co dzień:</p>
+<ul>
+  <li>🧠 <strong>SQL</strong> – od zapytań po optymalizację baz danych</li>
+  <li>🌐 <strong>RouterOS dla MikroTik</strong> – konfiguracja sieci, skrypty i automatyzacja</li>
+  <li>💻 <strong>C#</strong> – aplikacje desktopowe, narzędzia i integracje</li>
+  <li>🔌 <strong>ESP32 i Arduino</strong> – projekty IoT, elektronika i mikrokontrolery</li>
+</ul>
+<p>Strona powstała z pasji do rozwiązywania problemów i dzielenia się wiedzą. Jeśli interesuje Cię programowanie, sieci komputerowe lub elektronika – jesteś w dobrym miejscu.</p>
+</div>
+
