dodanie strony z logami

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -3,7 +3,7 @@ layout: single
 title: "About (EN)"
 locale: en-US
 permalink: /en/about/
-id: about
+id: about-index
 ---
 
 This is the About page for the English version.
