deploy: a2a9d198cd80307026f45cd8cc5bcb12884db91a

--- a/debug-pages/index.html
+++ b/debug-pages/index.html
@@ -43,6 +43,8 @@
 
   <li>ID:  | URL: /feed.xml | Locale: </li>
 
+  <li>ID: home | URL: /page2/ | Locale: en-US</li>
+
   <li>ID:  | URL: /sitemap.xml | Locale: </li>
 
   <li>ID:  | URL: /robots.txt | Locale: </li>
